chrome fixed z-index for blog logo text

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -244,5 +244,6 @@ a{
   padding-bottom: 15px;
   padding-top: 15px;
   margin-bottom: 0;
+  z-index: 999999;
 }
 
